package armurerie;

public class Armure {
}
