package items.armes;

public class ArmeCourante {
}
