package items.armes;

public class ArmeDistance {
}
