package items.armures;

public class ArmureLegere {
}
