package items.armures;

public class ArmureLourde {
}
