package personnages.classe;

public class Classe {
}
