package personnages.classe;

public class Clerc {
}
