package personnages.classe;

public class Guerrier {
}
