package personnages.classe;

public class Magicien {
}
