package personnages.classe;

public class Roublard {
}
