package personnages.race;

public class Humain {
}
