package personnages.race;

public class Nain {
}
