package personnages.race;

public class Race {
}
