@startuml
'https://plantuml.com/class-diagram
scale 1

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

package affichage{
    class Affichage {
        +afficherCarte(Map)
        +afficherJoueur(Personnage)
        +afficherMonstre(Monstre)
        +afficherArme(Arme)
        +afficherArmure(Armure)
        +afficher(String)
        +afficherErreur(String)
        +afficherAction(String)
    }

}
package gameContent
{
    package personnages
    {
        class Personnage {
            +<<create>> Personnage()
            -m_nom:String
            +attaquer(Monstre)
        }
        Personnage "1" --> "1"race.Race : appartient à >
        Personnage "1"--> "1"classe.Classe : est >
        Personnage "1"--> "1"caracteristiques.CaracteristiquePersonnage : possède des >
        Personnage "1"--> "1"gameContent.items.Armurerie:possède >
        Personnage "1"--> "1"gameContent.items.Equipement:possède >
        Personnage .> monstre.Monstre : <<utilise>>

        package race{
            abstract class Race <<abstract>>{
                +<<create>> Race()
                #m_type:String
            }
            class Elfe {
            }
            class Halfelin {
            }
            class Humain {
            }
            class Nain {
            }
            Humain --|> Race
            Nain --|> Race
            Elfe --|> Race
            Halfelin --|> Race
        }
        Race "1"--> "1"caracteristiques.CaracteristiquePersonnage: possède des >

        package caracteristiques{
            abstract class Caracteristiques <<abstract>> {
                +<<create>> Caracteristiques()
                #m_pv:Integer
                #m_force:Integer
                #m_dexterite:Integer
                #m_vitesse:Integer
                #m_initiative:Integer
            }
            class CaracteristiqueMonstre {
                -m_classeArmure:Integer
                +getClassArmure():Integer
            }
            class CaracteristiquePersonnage {
            }
            CaracteristiquePersonnage --|> Caracteristiques
            CaracteristiqueMonstre --|> Caracteristiques
        }
        package classe{
            abstract class Classe <<abstract>> {
                +<<create>> Classe()
                #m_nom:String
                #m_pvs:Integer
            }
            class Clerc {
            }
            class Guerrier {
            }
            class Magicien {
            }
            class Roublard {
            }
            Classe "1" --> "1"gameContent.items.Armurerie
            Clerc --|> Classe
            Guerrier --|> Classe
            Magicien --|> Classe
            Roublard --|> Classe

        }
        package monstre {
            class Monstre {
                +<<create>> Monstre():Monstre
                -m_espece:String
                -m_numero:Integer
                +getEspece():String
                +getNumero():Integer
                +attaquer(Personnage)
            }
            Monstre "1" o--> "1" gameContent.personnages.caracteristiques.CaracteristiqueMonstre
            Monstre .> Personnage :>
        }

    }

    package items
    {
        class Armurerie {
            +<<create>> Armurerie()
            +getM_armes():Arme[*]
            +getM_armures():Armure[*]
            +addM_armes(Arme)
            +addM_armures(Armure)
            +delM_armes(Arme)
            +delM_armures(Armure)
        }
        Armurerie "1" --> "0..*" armures.Armure:possède >
        Armurerie "1" --> "0..*" armes.Arme:possède >

        class Equipement {
            +<<Create>> Equipement()
        }
        Equipement "1"--> "0..1"armures.Armure
        Equipement "1"--> "0..1"armes.Arme

        package armures {

            abstract class Armure <<abstract>> {
                +<<create>> Armure()
                #m_nom:String
                #m_classeArmure:Integer
            }

            class ArmureLourde {

            }

            class Armurelegere {

            }
            Armurelegere --|> Armure
            ArmureLourde --|> Armure

        }

        package armes {

            abstract class Arme <<abstract>> {
                +<<create>> Arme()
                #m_nom:String
                #m_degat:Integer
                #m_portee:Integer
            }

            class ArmeCourante {

            }

            class ArmeGuerre {

            }

            class ArmeDistance {

            }
            ArmeCourante --|> Arme
            ArmeDistance --|> Arme
            ArmeGuerre --|> Arme

        }
    }
}

package de {
    class De {
        -m_faces
        -m_nbdedes
        +<<create>> De(int, int):De
        +lancerde():int
    }
}
package mdj {
    class Map{
    -m_map:Integer[15][25]
    +createRandomMap():Integer[15][25]
    +getM_map():Integer[15][25]
    +createOwnMap():Integer[15][25]
    }
    Map "1" *--> "1..*" Monstre : contient >
    Map "1" *--> "1..*" Personnage : contient >

    class Mdj{
    -m_nbJoueurs:Integer
    -m_tour:Integer
    +<<create>> Mdj()
    +getM_nbJoueurs():Integer
    +getM_joueurs():Personnage[m_nbJoueurs]
    +getM_map():Map
    +chooseRace():Race
    +chooseClasse():Classe
    +createJoueur():Personnage
    }
    Mdj "1" *--> "1..* m_joueurs" gameContent.personnages.Personnage
    Mdj "1"-->"1" Map
    Mdj "1" --> "0..*" gameContent.personnages.Personnage
    Mdj .> affichage.Affichage:Utilise
    Mdj .> De :<<utilise>>
}

@enduml
